--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server:build":"tsc -p tsconfig.server.json",
+    "server:execute":"node dist/out-tsc-server/src/app/server/server.js",
+    "server:start":"npm run server:build && npm run server:execute"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +24,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/body-parser": "^1.16.8",
+    "@types/express": "^4.11.0",
+    "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "radweb": "^1.0.4",
     "rxjs": "^5.4.2",
