--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@angular/router": "^4.2.4",
     "@types/body-parser": "^1.16.8",
     "@types/express": "^4.11.0",
+    "@types/mssql": "^4.0.6",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "mssql": "^4.1.0",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "radweb": "^1.0.4",
     "rxjs": "^5.4.2",
