--- a/package.json
+++ b/package.json
@@ -30,14 +30,13 @@
     "@types/express": "^4.11.0",
     "@types/mssql": "^4.0.6",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0",
+    "bootstrap3": "^3.3.5",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "mssql": "^4.1.0",
     "ngx-bootstrap": "^2.0.3",
-    "popper.js": "^1.14.1",
-    "radweb": "^1.1.4",
+    "radweb": "^1.1.11",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
