Replaced sql server with postgres, added .env file and Categories

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "body-parser": "^1.18.2",
     "bootstrap3": "^3.3.5",
     "core-js": "^2.4.1",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
     "mssql": "^4.1.0",
     "ngx-bootstrap": "^2.0.3",
-    "radweb": "^1.1.11",
+    "pg": "^7.4.1",
+    "radweb": "^1.1.13",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -44,10 +46,12 @@
     "@angular/cli": "~1.7.3",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/dotenv": "^4.0.2",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.16",
     "@types/node": "~6.0.60",
+    "@types/pg": "^7.4.5",
     "codelyzer": "^4.0.1",
     "concurrently": "^3.5.1",
     "jasmine-core": "~2.8.0",
@@ -58,8 +62,8 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.14.3",
     "ngrok": "^2.2.23",
+    "nodemon": "^1.14.3",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
