--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ng": "ng",
     "ng-serve": "ng serve",
-    "start1": "concurrently \"ng serve\" \"npm run server:watch\"",
+    "start":"ts-node --project tsconfig.server.json src/app/server/server.ts",
+    "start_dev": "concurrently \"ng serve\" \"npm run server:watch\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -65,7 +66,7 @@
     "ngrok": "^2.2.23",
     "nodemon": "^1.14.3",
     "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
+    "ts-node": "^4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
   }
