--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run server:execute",
     "start_old": "ts-node --project tsconfig.server.json src/app/server/server.ts",
     "start_dev": "concurrently \"ng serve\" \"npm run server:watch\"",
-    "build": "ng build",
+    "build": "ng build --prod",
     "postinstall": "npm run server:build&&npm run build",
     "test": "ng test",
     "lint": "ng lint",
