Fixed express to ignore routing problems.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start_dev": "concurrently \"ng serve\" \"npm run server:watch\"",
     "build": "ng build --prod",
     "postinstall": "npm run server:build&&npm run build",
-    "publish-to-heroku":"git push heroku master",
+    "publish-to-heroku": "git push heroku master",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -41,6 +41,7 @@
     "jquery": "^3.3.1",
     "mssql": "^4.1.0",
     "ngx-bootstrap": "^2.0.3",
+    "path": "^0.12.7",
     "pg": "^7.4.1",
     "radweb": "^1.1.16",
     "rxjs": "^5.5.6",
