--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "gc": "ng generate component --spec false",
     "ng-serve": "ng serve",
     "start": "npm run server:execute",
     "start_old": "ts-node --project tsconfig.server.json src/app/server/server.ts",
     "start_dev": "concurrently \"ng serve\" \"npm run server:watch\"",
     "build": "ng build --prod",
-    "postinstall": "npm run server:build&&npm run build",
+    "postinstall1": "npm run server:build&&npm run build",
     "publish-to-heroku": "git push heroku master",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,11 +23,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
@@ -36,6 +39,7 @@
     "body-parser": "^1.18.2",
     "bootstrap3": "^3.3.5",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
