Added authenticate request that can work directly with express if you want to

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     
-    "outDir": "./dist-server/src",
+    "outDir": "./dist-server/",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
