--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,20 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "radweb": [
+        "../radweb/projects/radweb/src/public_api"
+      ],
+      "radweb-server": [
+        "../radweb/projects/radweb-server"
+      ],
+      "radweb/*": [
+        "../radweb/projects/radweb/src/*"
+      ],
+      "radweb-server-postgres": [
+        "../radweb/projects/radweb-server-postgres"
+      ],
+    },
   }
 }
