--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    
+    "baseUrl": ".",
     "outDir": "./dist-server/",
     "sourceMap": true,
     "declaration": false,
@@ -18,6 +18,20 @@
       "es2017",
       "dom"
     ],
+    "paths": {
+      "radweb": [
+        "../radweb/projects/radweb/src/public_api"
+      ],
+      "radweb-server": [
+        "../radweb/projects/radweb-server"
+      ],
+      "radweb-server-postgres": [
+        "../radweb/projects/radweb-server-postgres"
+      ],
+      "radweb/*": [
+        "../radweb/projects/radweb/src/*"
+      ],
+    }
   },
   "files": [
     "./src/app/server/server.ts",
