--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "~7.3.4",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/animations": "^7.2.9",
+    "@angular/cdk": "^7.3.4",
+    "@angular/common": "^7.2.9",
+    "@angular/compiler": "^7.2.9",
+    "@angular/core": "^7.2.9",
+    "@angular/forms": "^7.2.9",
+    "@angular/http": "^7.2.9",
+    "@angular/platform-browser": "^7.2.9",
+    "@angular/platform-browser-dynamic": "^7.2.9",
+    "@angular/router": "^7.2.9",
+    "@auth0/angular-jwt": "^3.0.0",
     "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@auth0/angular-jwt": "^2.0.0",
     "body-parser": "^1.18.3",
     "bootstrap3": "^3.3.5",
     "chart.js": "^2.7.3",
@@ -40,7 +41,7 @@
     "express-force-https": "^1.0.0",
     "express-sse": "^0.5.0",
     "hammerjs": "^2.0.8",
-    "jsonwebtoken": "^8.3.0",
+    "jsonwebtoken": "^8.5.1",
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.1",
     "node-fetch": "^2.2.1",
@@ -54,10 +55,11 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.5",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-ng-packagr": "~0.10.0",
+    "@angular/cli": "^7.3.5",
+    "@angular/compiler-cli": "^7.2.9",
+    "@angular/language-service": "~7.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/chart.js": "^2.7.40",
     "@types/compression": "0.0.36",
